Update symbol file loading path

--- a/Demo/M2354/Projects/Keil/NonSecure/FreeRTOSDemo_ns_debug.ini
+++ b/Demo/M2354/Projects/Keil/NonSecure/FreeRTOSDemo_ns_debug.ini
@@ -1,8 +1,3 @@
-load "D:\\MCU\\TF-M_review\\trusted-firmware-m\\out\\build\\m2354\\bin\\bl2.axf" INCREMENTAL NOCODE
-load "D:\\MCU\\TF-M_review\\trusted-firmware-m\\out\\build\\m2354\\bin\\tfm_s.axf" INCREMENTAL NOCODE
-//load "D:\\MCU\\TF-M_review\\trusted-firmware-m\\out\\build\\m2354\\bin\\tfm_ns.axf" INCREMENTAL NOCODE
+load "C:\\M2354\\trusted-firmware-m-m2354\\build\\bin\\bl2.axf" INCREMENTAL NOCODE
+load "C:\\M2354\\trusted-firmware-m-m2354\\build\\bin\\tfm_s.axf" INCREMENTAL NOCODE
 load %l incremental nocode
-// LOAD ".\\Objects\\FreeRTOSDemo_ns.axf" incremental
-// LOAD "..\\Secure\\Objects\\FreeRTOSDemo_s.axf" incremental
-//RESET
-//g, \\FreeRTOSDemo_s\main_s\main
