--- a/Demo/M2354/Projects/Keil/NonSecure/FreeRTOSDemo_ns_debug.ini
+++ b/Demo/M2354/Projects/Keil/NonSecure/FreeRTOSDemo_ns_debug.ini
@@ -1,3 +1,3 @@
-load "C:\\M2354\\trusted-firmware-m-m2354\\build\\bin\\bl2.axf" INCREMENTAL NOCODE
-load "C:\\M2354\\trusted-firmware-m-m2354\\build\\bin\\tfm_s.axf" INCREMENTAL NOCODE
+load "d:/out/m2354/bin/bl2.axf" INCREMENTAL NOCODE
+load "d:/out/m2354/bin/tfm_s.axf" INCREMENTAL NOCODE
 load %l incremental nocode
