--- a/Demo/M2354/Projects/Keil/NonSecure/FreeRTOSDemo_ns_flash.ini
+++ b/Demo/M2354/Projects/Keil/NonSecure/FreeRTOSDemo_ns_flash.ini
@@ -1,3 +1,3 @@
 //LOAD "..\\Secure\\Objects\\FreeRTOSDemo_s.axf" incremental
 
-load "c:/M2354/freertos_signed.hex" incremental
+load "d:/out/m2354/bin/freertos_signed.hex" incremental
